# cmake-example-project

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
app/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
tests/: CMakeLists.txt
